serverless conversion complete

--- a/templates/output.html
+++ b/templates/output.html
@@ -8,71 +8,71 @@
     <h1>Your Workout Program</h1>
       <h3>Week 1</h3>
         <h4>Day 1</h4>
-          {% for line in outputs[week1][day1] %}
+          {% for line in outputs['week1']['day1'] %}
             <p> {{ line }} </P>
           {% endfor %}
         <h4>Day 2</h4>
-          {% for line in outputs[week1][day2] %}
+          {% for line in outputs['week1']['day2'] %}
             <p> {{ line }} </P>
           {% endfor %}
         <h4>Day 3</h4>
-          {% for line in outputs[week1][day3] %}
+          {% for line in outputs['week1']['day3'] %}
             <p> {{ line }} </P>
           {% endfor %}
 
       <h3>Week 2</h3>
         <h4>Day 1</h4>
-          {% for line in outputs[week2][day1] %}
+          {% for line in outputs['week2']['day1'] %}
             <p> {{ line }} </P>
           {% endfor %}
         <h4>Day 2</h4>
-          {% for line in outputs[week2][day2] %}
+          {% for line in outputs['week2']['day2'] %}
             <p> {{ line }} </P>
           {% endfor %}
         <h4>Day 3</h4>
-          {% for line in outputs[week2][day3] %}
+          {% for line in outputs['week2']['day3'] %}
             <p> {{ line }} </P>
           {% endfor %}
 
       <h3>Week 3</h3>
         <h4>Day 1</h4>
-          {% for line in outputs[week3][day1] %}
+          {% for line in outputs['week3']['day1'] %}
             <p> {{ line }} </P>
           {% endfor %}
         <h4>Day 2</h4>
-          {% for line in outputs[week3][day2] %}
+          {% for line in outputs['week3']['day2'] %}
             <p> {{ line }} </P>
           {% endfor %}
         <h4>Day 3</h4>
-          {% for line in outputs[week3][day3] %}
+          {% for line in outputs['week3']['day3'] %}
             <p> {{ line }} </P>
           {% endfor %}
 
       <h3>Week 4</h3>
          <h4>Day 1</h4>
-          {% for line in outputs[week4][day1] %}
+          {% for line in outputs['week4']['day1'] %}
             <p> {{ line }} </P>
           {% endfor %}
         <h4>Day 2</h4>
-          {% for line in outputs[week4][day2] %}
+          {% for line in outputs['week4']['day2'] %}
             <p> {{ line }} </P>
           {% endfor %}
         <h4>Day 3</h4>
-          {% for line in outputs[week4][day3] %}
+          {% for line in outputs['week4']['day3'] %}
             <p> {{ line }} </P>
           {% endfor %}
 
       <h3>Week 5</h3>
         <h4>Day 1</h4>
-          {% for line in outputs[week5][day1] %}
+          {% for line in outputs['week5']['day1'] %}
             <p> {{ line }} </P>
           {% endfor %}
         <h4>Day 2</h4>
-          {% for line in outputs[week5][day2] %}
+          {% for line in outputs['week5']['day2'] %}
             <p> {{ line }} </P>
           {% endfor %}
         <h4>Day 3</h4>
-          {% for line in outputs[week5][day3] %}
+          {% for line in outputs['week5']['day3'] %}
             <p> {{ line }} </P>
           {% endfor %}
 
