major bug fix around issues with radio buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,12 +25,12 @@
         <h2 class="topmargin">Volume:</h2>
         <div class="form-check form-check-inline">
           <label class="form-check-label">
-            <input type="radio" class="form-check-input" name="mainliftchoice" value="True" checked>Low</input>
+            <input type="radio" class="form-check-input" name="mainliftchoice" value="low" checked>Low</input>
           </label>
         </div>
         <div class="form-check form-check-inline">
-          <label class="form-check-label"> 
-            <input type="radio" class="form-check-input" name="mainliftchoice" value="False">High</input>
+          <label class="form-check-label">
+            <input type="radio" class="form-check-input" name="mainliftchoice" value="high">High</input>
           </label>
         </div>
 
