--- a/templates/error.html
+++ b/templates/error.html
@@ -1,9 +1,7 @@
-<html>
-<head>
-<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}" />
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %}
+<div class="text-white">
   <h1> NO! <br> Do it again, and do it right this time... </h1>
-</body>
-</html>
+</div>
+{% endblock %}
 
