--- a/templates/index.html
+++ b/templates/index.html
@@ -1,52 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}" />
-  </head>
 
-  <body id="body">
+{% extends "layout.html" %}
+{% block content %}
+<div class="row">
+  <div class="col-4"></div>
+  <div class="card mt-5">
+    <div class="card-body">
+      <form action="/workout" method="post">
+        <div class="form-group">
 
-    <div class="vertical-center">
+            <h2>Input Maxes:</h2>
+            <input type="number" class="form-control" name="msq" placeholder="Max Squat">
+            <input type="number" class="form-control" name="mbe" placeholder="Max Press">
+            <input type="number" class="form-control" name="mdl" placeholder="Max Deadlift">
 
-    <form class="form-horizontal" action="/workout" method="post">
+            <h2>Volume:</h2>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" name="mainliftchoice" value="low" checked>Low</input>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" name="mainliftchoice" value="high">High</input>
+            </div>
 
-    <div class="form-group container">
-    <div class="col-md-3 col-md-offset-6 formcolor">
+          <div>
+            <button type="submit" value="Submit" class="button btn btn-primary">Submit</button>
+          </div>
 
-        <h2 class="topmargin">Input Maxes</h2>
-        <input type="number" class="form-control" name="msq" placeholder="Max Squat">
-        <input type="number" class="form-control" name="mbe" placeholder="Max Press">
-        <input type="number" class="form-control" name="mdl" placeholder="Max Deadlift">
-
-        <h2 class="topmargin">Volume:</h2>
-        <div class="form-check form-check-inline">
-          <label class="form-check-label">
-            <input type="radio" class="form-check-input" name="mainliftchoice" value="low" checked>Low</input>
-          </label>
         </div>
-        <div class="form-check form-check-inline">
-          <label class="form-check-label">
-            <input type="radio" class="form-check-input" name="mainliftchoice" value="high">High</input>
-          </label>
-        </div>
-
-      <div class="topmargin">
-        <button type="submit" value="Submit" class="button btn btn-primary">Submit</button>
-      </div>
-
+      </form>
     </div>
-    </div>
-    </form>
-
-    </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-
-  </body>
-</html>
+  </div>
+  <div class="col-4"></div>
+</div>
+{% endblock %}
 
