--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,28 @@
   </head>
 
   <body class="bg-secondary">
+    <header class="site-header">
+      <nav class="navbar navbar-expand-md navbar-dark">
+        <div class="container">
+          <a class="navbar-brand mr-4" href="/">Lifting Program Generator</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarToggle">
+            <div class="navbar-nav mr-auto">
+              <a class="nav-item nav-link" href="/">Home</a>
+              <a class="nav-item nav-link" href="/calculators">Calulators</a>
+              <a class="nav-item nav-link" href="/otherprograms">Other Programs</a>
+              <a class="nav-item nav-link" href="/about">About</a>
+            </div>
+            <div class="navbar-nav">
+              <a class="nav-item nav-link" href="/login">Login</a>
+              <a class="nav-item nav-link" href="/register">Register</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
     <div class="container">
         {% block content %}{% endblock %}
     </div>
