Upgrading to use flask native forms

--- a/templates/output.html
+++ b/templates/output.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="text-white">
+<div>
     <h1>Your Workout Program</h1>
     <hr>
       <h3>Week 1</h3>
