removed otherprograms, added myprogram, added saving of routine

--- a/templates/login.html
+++ b/templates/login.html
@@ -37,12 +37,12 @@
         </div>
     </fieldset>
     <div class="form-group">
-        {{ form.submit(class="btn btn-outline-info") }}
+        {{ form.submit(class="btn") }}
     </div>
-    <small class="text-muted ml-2">
+    <small class="ml-2">
         <a href="#">Forgot Password?</a>
     </small>
-    <small class="text-muted ml-2">
+    <small class="ml-2">
             <a href="{{ url_for('register') }}">Need An Account?</a>
     </small>
 </form>
