--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,11 +19,11 @@
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
               <a class="nav-item nav-link" href="{{ url_for('calculators') }}">Calulators</a>
-              <a class="nav-item nav-link" href="{{ url_for('otherprograms') }}">Other Programs</a>
               <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
             </div>
             <div class="navbar-nav">
               <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+              <a class="nav-item nav-link" href="{{ url_for('myprogram') }}">My Program</a>
               <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
             </div>
           </div>
