--- a/templates/register.html
+++ b/templates/register.html
@@ -46,12 +46,12 @@
         </div>
     </fieldset>
     <div class="form-group">
-        {{ form.submit(class="btn btn-outline-info") }}
+        {{ form.submit(class="btn") }}
     </div>
 </form>
 
 <div class="border-top pt-3">
-    <small class="text-muted">
+    <small>
         Already Have An Account? <a class="ml-2" href="{{ url_for('login') }}">Sign In</a>
     </small>
 </div>
