--- a/workoutgenerator/templates/layout.html
+++ b/workoutgenerator/templates/layout.html
@@ -11,7 +11,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">Lifting Program Generator</a>
+          <a class="navbar-brand mr-4" href="{{ url_for('home') }}">Lifting Program Generator</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
